<resources>
    <string name="app_name">BetterBudgeter2</string>
        <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">Better Budgeter 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="view_budget">View Budget</string>
    <string name="add_a_purchase">Add a purchase</string>
    <string name="view_expenses">View Expenses</string>
    <string name="view_purchases">View Purchases</string>
    <string name="manage_expenses">Manage Expenses</string>
    <string name="manage_incomes">Manage incomes</string>
    <string name="add_a_luxury">Add a luxury</string>
    <string name="manage_bills">Manage bills</string>
    <string name="view_bills">View bills</string>
    <string name="view_luxuries">View Luxuries</string>
    <string name="view_incomes">View incomes</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
    <string name="remove_selected">Remove selected</string>
    <string name="add_bill">Add bill</string>
    <string name="add_income">Add income</string>
</resources>
